src/content/docs/3.4.2/api/README.md
---
editUrl: false
next: false
prev: false
title: shoukaku
slug: 3.4.2/api/readme
---

## Namespaces

* [Connectors](/3.4.2/api/namespaces/connectors/readme/)
* [Constants](/3.4.2/api/namespaces/constants/readme/)
* [Utils](/3.4.2/api/namespaces/utils/readme/)

## Classes

* [Connection](/3.4.2/api/classes/connection/)
* [Connector](/3.4.2/api/classes/connector/)
* [Filters](/3.4.2/api/classes/filters/)
* [Node](/3.4.2/api/classes/node/)
* [Player](/3.4.2/api/classes/player/)
* [Rest](/3.4.2/api/classes/rest/)
* [Shoukaku](/3.4.2/api/classes/shoukaku/)

## Interfaces

* [Address](/3.4.2/api/interfaces/address/)
* [Band](/3.4.2/api/interfaces/band/)
* [ChannelMixSettings](/3.4.2/api/interfaces/channelmixsettings/)
* [ConnectorMethods](/3.4.2/api/interfaces/connectormethods/)
* [DistortionSettings](/3.4.2/api/interfaces/distortionsettings/)
* [Exception](/3.4.2/api/interfaces/exception/)
* [FilterOptions](/3.4.2/api/interfaces/filteroptions/)
* [FreqSettings](/3.4.2/api/interfaces/freqsettings/)
* [KaraokeSettings](/3.4.2/api/interfaces/karaokesettings/)
* [LavalinkResponse](/3.4.2/api/interfaces/lavalinkresponse/)
* [LowPassSettings](/3.4.2/api/interfaces/lowpasssettings/)
* [MergedShoukakuOptions](/3.4.2/api/interfaces/mergedshoukakuoptions/)
* [NodeOption](/3.4.2/api/interfaces/nodeoption/)
* [NodeStats](/3.4.2/api/interfaces/nodestats/)
* [NonResumableHeaders](/3.4.2/api/interfaces/nonresumableheaders/)
* [PlayOptions](/3.4.2/api/interfaces/playoptions/)
* [PlayPayload](/3.4.2/api/interfaces/playpayload/)
* [PlayerEvent](/3.4.2/api/interfaces/playerevent/)
* [PlayerUpdate](/3.4.2/api/interfaces/playerupdate/)
* [ResumableHeaders](/3.4.2/api/interfaces/resumableheaders/)
* [ResumeOptions](/3.4.2/api/interfaces/resumeoptions/)
* [RotationSettings](/3.4.2/api/interfaces/rotationsettings/)
* [RoutePlanner](/3.4.2/api/interfaces/routeplanner/)
* [ServerUpdate](/3.4.2/api/interfaces/serverupdate/)
* [ShoukakuOptions](/3.4.2/api/interfaces/shoukakuoptions/)
* [StateUpdatePartial](/3.4.2/api/interfaces/stateupdatepartial/)
* [Structures](/3.4.2/api/interfaces/structures/)
* [TimescaleSettings](/3.4.2/api/interfaces/timescalesettings/)
* [Track](/3.4.2/api/interfaces/track/)
* [TrackEndEvent](/3.4.2/api/interfaces/trackendevent/)
* [TrackExceptionEvent](/3.4.2/api/interfaces/trackexceptionevent/)
* [TrackStartEvent](/3.4.2/api/interfaces/trackstartevent/)
* [TrackStuckEvent](/3.4.2/api/interfaces/trackstuckevent/)
* [VoiceChannelOptions](/3.4.2/api/interfaces/voicechanneloptions/)
* [WebSocketClosedEvent](/3.4.2/api/interfaces/websocketclosedevent/)

## Type Aliases

* [LoadType](/3.4.2/api/type-aliases/loadtype/)
* [PlayerEventType](/3.4.2/api/type-aliases/playereventtype/)
* [Severity](/3.4.2/api/type-aliases/severity/)
* [TrackEndReason](/3.4.2/api/type-aliases/trackendreason/)
